# CLIP-not-BoW-unimodally

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
alignment/: ARO.ipynb  alignment_datasets.py  clevr_alignment.py  clevr_alignment_utils.py  coco_alignment.py  coco_utils.py  learning_alignment.py  pug_alignment.py  pug_alignment_utils.py  sugarcrepe_eval.ipynb
alignment/weights/: labclip_cc3m_neg_B32.pt  labclip_coco_neg_B16.pt  labclip_coco_neg_B32.pt  labclip_coco_neg_L14.pt
clevr_generation/: LICENSE  README.md  render_images.py  utils.py
clevr_generation/data/shapes/: SmoothCone.blend
data_loading/: clevr.py  pug.py
probing/: clevr_multi_object_probing.py  clevr_probing.py  clevr_probing_utils.py  probing_datasets.py  probing_models.py  pug_probing.py  pug_probing_utils.py
